kubernetes/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - longhorn.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
